--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+
 /node_modules
 /.pnp
 .pnp.js
@@ -10,6 +11,9 @@
 
 # production
 /build
+.firebaserc
+.firebase/hosting.YnVpbGQ.cache
+firebase.json
 
 # misc
 .DS_Store
